# gears_h

./: .gitignore  README.md  pyproject.toml
architecture_figures/: 0_overview.d2  1_sarb.d2  2a_ac.d2  2b_ac_submodules.d2  3_bc.d2  4_rd.d2
docs/source/: conf.py  index.rst
docs/source/api/: modules.md
docs/source/apidocs/: index.rst
docs/source/apidocs/slh/: slh.data.dataset.rst  slh.data.input_pipeline.rst  slh.data.preprocessing.rst  slh.data.process_dataset.rst  slh.data.rst  slh.data.utilities.rst  slh.hblockmapper.rst  slh.layers.descriptor.atomcentered.rst  slh.layers.descriptor.bondcentered.rst  slh.layers.descriptor.radial_basis.rst  slh.layers.descriptor.rst  slh.layers.readout.rst  slh.layers.residual_dense.rst  slh.layers.rst  (+1 more)
examples/WSe2-x/: config_full.yaml  wse2_example.ipynb
gears_h/: __init__.py  hblockmapper.py
gears_h/cli/: gears_h_app.py
gears_h/cli/templates/: train_config.yaml  train_config_annotated.yaml
gears_h/config/: common.py  lr_config.py  train_config.py
gears_h/data/: __init__.py  input_pipeline.py  preprocessing.py  utilities.py
gears_h/infer/: infer.py
gears_h/layers/: __init__.py  readout.py  residual_dense.py  scale_shift.py
gears_h/layers/descriptor/: __init__.py  atomcentered.py  bondcentered.py  radial_basis.py
gears_h/model/: builder.py  hmodel.py
gears_h/optimize/: get_optimizer.py
gears_h/train/: __init__.py  callbacks.py  loss.py  run.py  trainer.py
gears_h/utilities/: analyze.py  mapmaker.py  neighbours.py
slh/: __init__.py  hblockmapper.py
slh/cli/: slh_app.py
slh/cli/templates/: train_config.yaml  train_config_annotated.yaml  train_config_full.yaml
slh/config/: common.py  lr_config.py  train_config.py
slh/data/: __init__.py  input_pipeline.py  preprocessing.py  process_dataset.py
slh/infer/: infer.py
slh/layers/: __init__.py  corrections.py  ent_reg_attention.py  layer_norm.py  readout.py  residual_dense.py  scale_shift.py
slh/layers/descriptor/: __init__.py  atomcentered.py  bondcentered.py  radial_basis.py
slh/model/: builder.py  hmodel.py
slh/optimize/: get_optimizer.py
slh/train/: callbacks.py  checkpoints.py  loss.py  new_trainer.py  run.py  trainer.py
slh/utilities/: analyze.py  mapmaker.py  neighbours.py  random.py
surrogatelcaohamiltonians/: hblockmapper.py
surrogatelcaohamiltonians/cli/: slh_app.py
surrogatelcaohamiltonians/config/: train_config.py
surrogatelcaohamiltonians/data/: input_pipeline.py  preprocessing.py
surrogatelcaohamiltonians/layers/: __init__.py  bondwise.py  irreps_to_hblocks.py  readout.py  residual_dense.py
surrogatelcaohamiltonians/layers/descriptor/: atomcentered.py  bondcentered.py  radial_basis.py
surrogatelcaohamiltonians/model/: builder.py  hmodel.py
surrogatelcaohamiltonians/train/: trainer.py
surrogatelcaohamiltonians/utilities/: mapmaker.py  mapper.py
tests/integration_tests/: test_atomcentereddescriptor.py  test_blockmapper.py
tests/unit_tests/: test_data_pipeline.py  test_mapper.py  test_radialbasis.py
(+18 files in other folders)
