[tool.poetry]
name = "surrogatelcaohamiltonians"
version = "0.0.4"
description = "Package to learn electronic structure hamiltonians in an LCAO basis"
authors = ["Anubhab Haldar <a.haldar@samsung.com>"]
keywords=["machine-learning", "hamiltonians", "electronic-structure"]
packages = [{include = "slh"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.1"
sphinx = "^7.2.6"
jax = "^0.4.25"
e3x = "^1.0.1"
jaxtyping = "^0.2.28"
pydantic = "^2.6.4"
tqdm = "^4.66.2"
matscipy = "^1.0.0"
tensorflow = "^2.16.1"
clu = "^0.0.12"

[tool.poetry.scripts]
slh = 'slh.cli.slh_app:app'


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-autodoc2 = "^0.5.0"
sphinx-book-theme = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
