[project]
name = "gears_h"
version = "0.8.0"
authors = [
    {name = "Anubhab Haldar", email = "a.haldar@samsung.com"},
    {name = "Ali K. Hamze", email = "ali.hamze@samsung.com"},
]
maintainers = [
    {name = "Anubhab Haldar", email = "a.haldar@samsung.com"},
    {name = "Ali K. Hamze", email = "ali.hamze@samsung.com"},
]
keywords = [
    "machine-learning",
    "hamiltonians",
    "electronic-structure"
]
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "clu>=0.0.12",
    "e3x>=1.0.2",
    "grain==0.2.7",
    "jax[cuda12]>=0.6.0",
    "jaxtyping>=0.3.2",
    "matscipy>=1.1.1",
    "pydantic>=2.11.3",
    "sphinx>=8.2.3",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
gears_h = 'gears_h.cli.gears_h_app:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gears_h"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-book-theme>=1.1.4",
]

[tool.ruff.lint]
# Skip warning that doesn't play nice with jaxtyping  
# array size hints for multidimensional arrays (`F722`).
ignore = ["F722"]
